--- a/client/index.html
+++ b/client/index.html
@@ -1,63 +1,71 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>JWT It Down</title>
-<link rel="stylesheet" type="text/css" href="styles.css">
-<script src="client.js" type="module"></script>
+<link rel="stylesheet" type="text/css" href="client/styles.css">
+<script src="client/client.js" type="module"></script>
+
 <body>
-    <section class="header">
-            <h1>JWT It Down</h1>
-            <h3>Lets learn how jwts work!</h2>
+    <section class="header section-1">
+        <h1>JWT It Down</h1>
+        <h3>Lets learn how jwts work!</h3>
+        <p>A JSON Web Token (JWT) is a compact URL-safe way to represent claims to be transferred between two parties. The claims in a JWT are encoded as a JSON object that is used as the payload of either a JSON Web Signature (JWS) or as the plaintext of a JSON Web Encryption structure, enabling claims to be digitally signed or integrity protected and/or encrypted.</p>
+        <h4>What do you want to do?</h4>
+        <div>
+            <button id="jwsEnableButton">Create JSON Web Signature (JWS) JWT</button>
+            <button id="jweEnableButton">Create JSON Web Encryption (JWE) JWT</button>
+        </div>
     </section>
-    <section class="newJWT">
-        <h3>New JWT</h3>
-        <div>Pick a username. Normally this would be a login but we won't worry about that.</div>
-        <form id="newJWTForm">
-            <div>
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" placeholder="username">
-            </div>
-            <div>Normally the stuff below would be decided by the server but you can modify it here.</div>
-            <div>
-                <label for="claims">Additional Claims:</label>
-                <input type="text" id="claims" name="claims" placeholder="comma separated claims" value="read,write" title="comma separated claims">
-            </div>
-            <div>
+    <section id="jwsSection" hidden>
+        <section class="section-2">
+            <h3>New JWS</h3>
+            <div>Pick a username. Normally this would be a login but we won't worry about that.</div>
+            <form id="newJWSForm">
+                <div>
+                    <label for="username">Username:</label>
+                    <input type="text" id="username" name="username" placeholder="username">
+                </div>
+                <div>Normally the stuff below would be decided by the server but you can modify it here.</div>
+                <div>
+                    <label for="claims">Additional Claims:</label>
+                    <input type="text" id="claims" name="claims" placeholder="comma separated claims" value="read,write"
+                        title="comma separated claims">
+                </div>
+                <div>
                     <label for="ttl">TTL:</label>
                     <input type="number" id="ttl" name="ttl" value="120" title="time to live in seconds">
-            </div>
-            <h4>Algorithm</h4>
-            <div class="subsection">
-                <div>
-                    <label for="none">None:</label>
-                    <input type="radio" value="none" name="alg" checked title="Generated JWT will be a JWS without an HMAC.">
                 </div>
-                <div>
-                    <label for="hs256">HMAC using SHA-256:</label>
-                    <input type="radio" value="hs256" name="alg" title="Generated JWT will be a JWS with an HMAC.">
+                <h4>Algorithm</h4>
+                <div class="subsection">
+                    <div title="Generated JWS will not have an HMAC, and be insecure!">
+                        <label for="none">None:</label>
+                        <input type="radio" value="none" name="alg" checked>
+                    </div>
+                    <div title="Generated JWS will have an HMAC.">
+                        <label for="hs256">HMAC using SHA-256:</label>
+                        <input type="radio" value="hs256" name="alg">
+                    </div>
                 </div>
-                <div>
-                    <label for="rsa1_5">RSAES-PKCS1-v1_5 and AES_128_CBC_HMAC_SHA_256:</label>
-                    <input type="radio" value="rsa1_5" name="alg" title="Generated JWT will be a JWE.">
-                </div>
-            </div>
-            <input type="submit" value="Login / Get New JWT">
-        </form>
-    </section>
-    <section class="jwt">
-        <h3>Your JWT</h3>
-        <h4>JOSE Header</h4>
-        <pre id="jwtJoseHeader" contenteditable="true"></pre>
-        <h4>JWT Claims</h4>
-        <pre id="jwtClaims" contenteditable="true"></pre>
-        <input id="jwtSave" type="button" value="Save">
-        <h4>Base64</h4>
-        <pre id="jwtBase64"></pre>
-    </section>
-    <section class="actions">
+                <input type="submit" value="Login / Get New JWT">
+            </form>
+        </section>
+        <section class="section-3">
+            <h3>Your JWS</h3>
+            <h4>JOSE Header</h4>
+            <pre id="jwsJOSEHeader" contenteditable="true"></pre>
+            <h4>Claims</h4>
+            <pre id="jwsClaims" contenteditable="true"></pre>
+            <h4>Signature</h4>
+            <pre id="jwsSignature" contenteditable="true"></pre>
+            <input id="jwsSave" type="button" value="Update Locally">
+            <h4>Base64</h4>
+            <div id="jwsBase64"></div>
+        </section>
+        <section class="section-4">
             <h3>Actions</h3>
             <div>
                 <label for="claimCheck">Check claim:</label>
-                <input type="text" id="claimCheck" placeholder="comma separated claims" value="read" title="comma separated claims">
+                <input type="text" id="claimCheck" placeholder="comma separated claims" value="read"
+                    title="comma separated claims">
                 <input type="button" value="Check Claim">
                 <span id="checkResult"></span>
             </div>
@@ -65,12 +73,16 @@
                 <input type="button" value="Refresh JWT">
             </div>
         </section>
-    <section class="server">
-        <h3>Server Info</h3>
-        <div>Much of this is a secret and private to the server.</div>
-        <h4>Time</h4>
-        <pre id="time"></pre>
-        <h4>Key</h4>
-        <pre id="key"></div>
+        <section class="section-5">
+            <h3>Server Info</h3>
+            <div>Much of this is a secret and private to the server.</div>
+            <h4>Time</h4>
+            <pre id="time"></pre>
+            <h4>Key</h4>
+            <pre id="key"></div>
+        </section>
+    </section>
+    <section id="jweSection" hidden>
+        I am the JWE section. Under construction.
     </section>
 </body>
